--- a/android/353c.html
+++ b/android/353c.html
@@ -4,11 +4,11 @@
     <head>
         <meta charset="utf-8">
         <title>Arcaea 3.5.3c Modder</title>
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="../style.css">
         <!-- don't hate -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-        <script type="text/javascript" src="./FileSaver.min.js"></script>
-        <script type="text/javascript" src="./dllpatcher.js"></script>
+        <script type="text/javascript" src="../FileSaver.min.js"></script>
+        <script type="text/javascript" src="../dllpatcher.js"></script>
         <script type="text/javascript">
             window.addEventListener("load", function () {
                 new Patcher("armeabi-v7a/libcocos2dcpp.so", "", [
