--- a/android/353c.html
+++ b/android/353c.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
     <head>
         <meta charset="utf-8">
         <title>Arcaea 3.5.3c Modder</title>
