--- a/android/353c.html
+++ b/android/353c.html
@@ -141,8 +141,8 @@
                 /*
                 以下内容来自 ArcaeaModderv2
                 https://github.com/notmee1/ArcaeaModder
-                隔空喊话：感谢你对本项目的支持，所以能不能在Readme放一个本仓库的链接🤗
-                \开摆/
+                感谢对本项目的支持
+                有兴趣的话可以交个朋友
                 */
                 {
                     name: "离线时限制搭档能力",
