无法加载修复

--- a/android/353c.html
+++ b/android/353c.html
@@ -54,7 +54,7 @@
 <body class="mdui-theme-primary-pink mdui-theme-accent-pink">
     <script src="../mdui/js/mdui.min.js"></script>
     <script type="text/javascript" src="../FileSaver.min.js"></script>
-    <script type="text/javascript" src="../dllpatcher_new.js"></script>
+    <script type="text/javascript" src="../dllpatcher.js"></script>
 
     <script type="text/javascript">
         window.addEventListener("load", function () {
