--- a/android/353c.html
+++ b/android/353c.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html lang="zh">
-
-<head>
+<html lang="zh-cmn-Hans">
+  <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no"/>
+    <meta name="renderer" content="webkit"/>
+    <meta name="force-rendering" content="webkit"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+
     <title>Arcaea 3.5.3c Modder</title>
     <!-- don't hate -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
